// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H1 renders correctly with color prop 1`] = `
<h1
  className="sc-htpNat jUQWHu"
  color="red"
/>
`;

exports[`H1 renders correctly with floatLeft prop 1`] = `
<h1
  className="sc-htpNat gVjrkk"
/>
`;

exports[`H1 renders correctly with floatRight prop 1`] = `
<h1
  className="sc-htpNat gmUMAQ"
/>
`;

exports[`H1 renders correctly with no props 1`] = `
<h1
  className="sc-htpNat fDCtBa"
/>
`;

exports[`H1 renders correctly with size prop 1`] = `
<h1
  className="sc-htpNat hMjQsm"
  size="31px"
/>
`;

exports[`H1 renders correctly with weight prop 1`] = `
<h1
  className="sc-htpNat bZxSW"
/>
`;

exports[`H2 renders correctly with color prop 1`] = `
<h2
  className="sc-bxivhb iazwlb"
  color="red"
/>
`;

exports[`H2 renders correctly with floatLeft prop 1`] = `
<h2
  className="sc-bxivhb behYEK"
/>
`;

exports[`H2 renders correctly with floatRight prop 1`] = `
<h2
  className="sc-bxivhb XAVRg"
/>
`;

exports[`H2 renders correctly with no props 1`] = `
<h2
  className="sc-bxivhb hjEbEM"
/>
`;

exports[`H2 renders correctly with size prop 1`] = `
<h2
  className="sc-bxivhb jhUrcq"
  size="31px"
/>
`;

exports[`H2 renders correctly with weight prop 1`] = `
<h2
  className="sc-bxivhb ecbssa"
/>
`;

exports[`H3 renders correctly with color prop 1`] = `
<h3
  className="sc-ifAKCX jiJfGX"
  color="red"
/>
`;

exports[`H3 renders correctly with floatLeft prop 1`] = `
<h3
  className="sc-ifAKCX jCSPFi"
/>
`;

exports[`H3 renders correctly with floatRight prop 1`] = `
<h3
  className="sc-ifAKCX hHDrVk"
/>
`;

exports[`H3 renders correctly with no props 1`] = `
<h3
  className="sc-ifAKCX EqkBF"
/>
`;

exports[`H3 renders correctly with size prop 1`] = `
<h3
  className="sc-ifAKCX XQeyL"
  size="31px"
/>
`;

exports[`H3 renders correctly with weight prop 1`] = `
<h3
  className="sc-ifAKCX dBtmtW"
/>
`;

exports[`H4 renders correctly with color prop 1`] = `
<h4
  className="sc-EHOje dRMlBX"
  color="red"
/>
`;

exports[`H4 renders correctly with floatLeft prop 1`] = `
<h4
  className="sc-EHOje clLpTl"
/>
`;

exports[`H4 renders correctly with floatRight prop 1`] = `
<h4
  className="sc-EHOje fxLVE"
/>
`;

exports[`H4 renders correctly with no props 1`] = `
<h4
  className="sc-EHOje gKKwWJ"
/>
`;

exports[`H4 renders correctly with size prop 1`] = `
<h4
  className="sc-EHOje gpYrhu"
  size="31px"
/>
`;

exports[`H4 renders correctly with weight prop 1`] = `
<h4
  className="sc-EHOje feFqyf"
/>
`;

exports[`H5 renders correctly with clearLeft prop 1`] = `
<h5
  className="sc-bZQynM heDFfk"
/>
`;

exports[`H5 renders correctly with clearRight prop 1`] = `
<h5
  className="sc-bZQynM gzTXPa"
/>
`;

exports[`H5 renders correctly with color prop 1`] = `
<h5
  className="sc-bZQynM jmjuZw"
  color="red"
/>
`;

exports[`H5 renders correctly with floatLeft prop 1`] = `
<h5
  className="sc-bZQynM iJeNDY"
/>
`;

exports[`H5 renders correctly with floatRight prop 1`] = `
<h5
  className="sc-bZQynM KaDoh"
/>
`;

exports[`H5 renders correctly with no props 1`] = `
<h5
  className="sc-bZQynM IRECq"
/>
`;

exports[`H5 renders correctly with size prop 1`] = `
<h5
  className="sc-bZQynM hoOnWt"
  size="31px"
/>
`;

exports[`H5 renders correctly with weight prop 1`] = `
<h5
  className="sc-bZQynM IRECq"
/>
`;

exports[`Label renders correctly with no props 1`] = `
<label
  className="sc-iwsKbI hyPKGg"
/>
`;

exports[`P1 renders correctly with no props 1`] = `
<p
  className="sc-gzVnrw hqoLCq"
/>
`;

exports[`P2 renders correctly with no props 1`] = `
<p
  className="sc-htoDjs fXGNOh"
/>
`;

exports[`S1 renders correctly with no props 1`] = `
<span
  className="sc-dnqmqq hWfOKC"
/>
`;
